# whispy

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.tester  README.MD  clean.sh  configure  configure.sh  docker-compose.yml  fibonacci-iterator.py  main.py  make.sh  test.py  whisperpy.cpp  whisperpy.py  whisperpy_env.sh
cmake/: ProjectSetup.cmake
cmake-dev-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake-dev-build/src/backend/whisper.cpp/: Makefile  cmake_install.cmake  whisper-config.cmake
cmake-dev-build/src/backend/whisper.cpp/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
cmake-dev-build/src/backend/whisper.cpp/ggml/src/: Makefile  cmake_install.cmake
cmake-dev-build/src/backend/whisper.cpp/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
cmake-dev-build/src/backend/whisper.cpp/src/: Makefile  cmake_install.cmake  libwhisper.so.1
cmake-dev-build/tests/low-lvl-api/: Makefile  cmake_install.cmake  low-lvl-api
cmake/functions/: PrepareFFMPEG.cmake  WHISPY_DetectTools.cmake  WHISPY_PrepareFFMPEG.cmake  WHISPY_RunpathUtils.cmake
cmake/toolchains/: amd64-linux-gnu.cmake
examples/: cli-tool.py
include/: whisperpy.h  whispy.h
licenses/: fastapi.md  soundfile.md
sandbox/: CMakeLists.txt
sandbox/audio_decoding_minimp3/: CMakeLists.txt  main.cpp
sandbox/generic_audio_decoder_libav/: CMakeLists.txt  main.cpp
src/: __init__.py  requirements.txt  setup.py  utils.py  whisperpy.py  wrapper.py
src/backend/: transcript-context.cpp  utils.tpp
src/whisperpy/: transcript-context.cpp  utils.py  utils.tpp  whisperpy.py  wrapper.py
src/whispy/: __init__.py  bindings.py  lib_loader.py  transcript_context_api.cpp  transcript_context_utils.tpp  utils.py  whispy.h  whispy.py
tests/: CMakeLists.txt  basic-test.py  cli-test.py  high-lvl-api.py  runall.sh  test_basic.py
tests/low-lvl-api/: CMakeLists.txt  main.cpp
